--- a/codes/title-card.html
+++ b/codes/title-card.html
@@ -266,7 +266,7 @@
         <div class="dots"></div>
 
         <div class="name">
-          <div class="text">RAJINI</div>
+          <div class="text">MANUJEN</div>
         </div>
       </div>
     </div>
